--- a/hall_planning_service/src/main/resources/application.properties
+++ b/hall_planning_service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 server.port=2222
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.datasource.username=sa
+spring.datasource.password=password
