Planning Service: Kafka WIP

--- a/hall_planning_service/src/main/resources/application.properties
+++ b/hall_planning_service/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.datasource.username=sa
 spring.datasource.password=password
+
+kafka.bootstrap.servers=localhost:9092
