Planning Service: Kafka works

--- a/hall_planning_service/src/main/resources/application.properties
+++ b/hall_planning_service/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.h2.console.path=/h2-console
 spring.datasource.username=sa
 spring.datasource.password=password
 
-kafka.bootstrap.servers=localhost:9092
+spring.cloud.stream.bindings.planning_updated.destination=planningMade
+spring.could.stream.bindings.planning_updated.content-type=plain/text
