Planning Service: WIP; docker-compose

--- a/hall_planning_service/src/main/resources/application.properties
+++ b/hall_planning_service/src/main/resources/application.properties
@@ -5,7 +5,8 @@ server.port=2223
 #spring.datasource.password=password
 
 #MySQL properties
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=create-drop 
+spring.jpa.hibernate.ddl-auto=update #use after initial setup
 spring.datasource.url=jdbc:mysql://localhost:3306/Day
 spring.datasource.username=root
 spring.datasource.password=ThePassword
@@ -15,5 +16,5 @@ spring.cloud.stream.bindings.planning_updated.destination=planningMade
 spring.could.stream.bindings.planning_updated.content-type=plain/text
 
 #Normal deployment, for docker enable:
-#spring.cloud.stream.kafka.binder.brokers=kafka
-#spring.cloud.stream.kafka.binder.zkNodes=zookeeper
+spring.cloud.stream.kafka.binder.brokers=kafka
+spring.cloud.stream.kafka.binder.zkNodes=zookeeper
