--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,22 +18,25 @@ services:
   mySQLdb:
     image: mysql:5.7
     command: --default-authentication-plugin=mysql_native_password
+    expose:
+      - "3306"
     environment:
       - MYSQL_ROOT_PASSWORD=ThePassword
       - MYSQL_DATABASE=Day
 
-# -------------Main services---------------
 
-  patientmanagement:
-    build: ./hall_planning_service
+# -------------Main services---------------
+  hall_planning:
+    build: 
+      context: ./hall_planning_service
+#   TODO: wait for mySQLdb
+    restart: on-failure
     links:
       - mySQLdb
-    depends_on:
-      - mySQLdb
-    links:
       - kafka
       - zookeeper
     depends_on:
+      - mySQLdb
       - kafka
       - zookeeper
     ports:
