--- a/hall_planning_service/src/main/resources/application.properties
+++ b/hall_planning_service/src/main/resources/application.properties
@@ -9,9 +9,9 @@ server.port=2223
  #use after initial setup
 spring.jpa.hibernate.ddl-auto=update
 #Docker compose:
-#spring.datasource.url=jdbc:mysql://mySQLdb:3306/Day
+spring.datasource.url=jdbc:mysql://mySQLdb:3306/Day
 #IDE: (indien dit in docker, probeert hij in de container naar 3306 te zoeken)
-spring.datasource.url=jdbc:mysql://localhost:3306/Day
+#spring.datasource.url=jdbc:mysql://localhost:3306/Day
 
 spring.datasource.username=root
 spring.datasource.password=ThePassword
