--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,7 +19,9 @@ services:
     image: mysql:5.7
     command: --default-authentication-plugin=mysql_native_password
     expose:
-      - "3306"
+      - "3306:3036"
+    ports:
+      - "3306:3036"
     environment:
       - MYSQL_ROOT_PASSWORD=ThePassword
       - MYSQL_DATABASE=Day
@@ -30,7 +32,12 @@ services:
     build: 
       context: ./hall_planning_service
 #   TODO: wait for mySQLdb
-    restart: on-failure
+    deploy:
+      restart_policy:
+        condition: on-failure
+        delay: 20s
+        max_attempts: 5
+        window: 10s
     links:
       - mySQLdb
       - kafka
