Update Planning service

--- a/hall_planning_service/src/main/resources/application.properties
+++ b/hall_planning_service/src/main/resources/application.properties
@@ -21,5 +21,5 @@ spring.cloud.stream.bindings.planning_updated.destination=planningMade
 spring.could.stream.bindings.planning_updated.content-type=plain/text
 
 #Normal deployment, for docker compose enable:
-#spring.cloud.stream.kafka.binder.brokers=kafka
-#spring.cloud.stream.kafka.binder.zkNodes=zookeeper
+spring.cloud.stream.kafka.binder.brokers=kafka
+spring.cloud.stream.kafka.binder.zkNodes=zookeeper
