--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,12 @@
-version: "3.4"
+version: "3"
 services:
 # ------------Support services-------------
   zookeeper:
     image: confluentinc/cp-zookeeper
     environment:
       - ZOOKEEPER_CLIENT_PORT=2181
+    ports:
+      - "2181:2181"
   kafka:
     image: confluentinc/cp-kafka
     depends_on: 
@@ -14,14 +16,15 @@ services:
       - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
       - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
       - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
-
+    ports:
+      - "9092:9092"
   mySQLdb:
     image: mysql:5.7
     command: --default-authentication-plugin=mysql_native_password
     expose:
       - "3306"
     ports:
-      - "3306:3036"
+      - "3306:3306"
     environment:
       - MYSQL_ROOT_PASSWORD=ThePassword
       - MYSQL_DATABASE=Day
