--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,8 +5,8 @@ services:
     image: confluentinc/cp-zookeeper
     environment:
       - ZOOKEEPER_CLIENT_PORT=2181
-    ports:
-      - "2181:2181"
+    expose:
+      - "2181"
   kafka:
     image: confluentinc/cp-kafka
     depends_on: 
@@ -16,8 +16,8 @@ services:
       - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
       - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
       - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
-    ports:
-      - "9092:9092"
+    expose:
+      - "9092"
   mySQLdb:
     image: mysql:5.7
     command: --default-authentication-plugin=mysql_native_password
