--- a/hall_planning_service/src/main/resources/application.properties
+++ b/hall_planning_service/src/main/resources/application.properties
@@ -1,25 +1,1 @@
-server.port=2223
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
-#spring.datasource.username=sa
-#spring.datasource.password=password
-
-#MySQL properties
-#spring.jpa.hibernate.ddl-auto=create-drop 
- #use after initial setup
-spring.jpa.hibernate.ddl-auto=update
-#Docker compose:
-spring.datasource.url=jdbc:mysql://mySQLdb:3306/Day
-#IDE: (indien dit in docker, probeert hij in de container naar 3306 te zoeken)
-#spring.datasource.url=jdbc:mysql://localhost:3306/Day
-
-spring.datasource.username=root
-spring.datasource.password=ThePassword
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-
-spring.cloud.stream.bindings.planning_updated.destination=planningMade
-spring.could.stream.bindings.planning_updated.content-type=plain/text
-
-#Normal deployment, for docker compose enable:
-spring.cloud.stream.kafka.binder.brokers=kafka
-spring.cloud.stream.kafka.binder.zkNodes=zookeeper
+spring.profiles.active=dev
