--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 \.project
 
 movie_flow_service/src/main/java/system_design/.DS_Store
+
+frontend/frontend/node_modules/
+
+frontend/frontend/\.settings/
