--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 
 \.project
+
+frontend/frontend/.settings/
+
+movie_flow_service/target/
+
+movie_flow_service/.settings/
+
+movie_flow_service/.classpath
