MFS consumes planning updated events

--- a/movie_flow_service/src/main/resources/application.properties
+++ b/movie_flow_service/src/main/resources/application.properties
@@ -10,5 +10,11 @@ spring.datasource.username=root
 spring.datasource.password=ThePassword
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
-spring.cloud.stream.bindings.planning_updated.destination=planningMade
+
+
+#spring.cloud.stream.kafka.binder.brokers=kafka
+#spring.cloud.stream.kafka.binder.zkNodes=zookeeper
+
 spring.could.stream.bindings.planning_updated.content-type=plain/text
+spring.cloud.stream.bindings.planning_updated.destination=planningMade
+
