--- a/hall_planning_service/src/main/resources/application-dev.properties
+++ b/hall_planning_service/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@ server.port=2223
 #spring.jpa.hibernate.ddl-auto=create-drop 
  #use after initial setup
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/Day
+spring.datasource.url=jdbc:mysql://localhost:3306/HallPlanningService
 
 spring.datasource.username=root
 spring.datasource.password=ThePassword
@@ -12,3 +12,11 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 
 spring.cloud.stream.bindings.planning_updated.destination=planningMade
 spring.could.stream.bindings.planning_updated.content-type=plain/text
+movie.api.key=754be433
+
+spring.data.mongodb.database=movie
+spring.data.mongodb.host=localhost
+spring.data.mongodb.username=root
+spring.data.mongodb.password=ThePassword
+spring.data.mongodb.port=27017
+spring.data.mongodb.authentication-database=admin
