--- a/hall_planning_service/src/main/resources/application-prod.properties
+++ b/hall_planning_service/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 server.port=2223
 spring.jpa.hibernate.ddl-auto=update
 #Docker compose:
-spring.datasource.url=jdbc:mysql://mySQLdb:3306/Day
+spring.datasource.url=jdbc:mysql://mySQLdb:3306/HallPlanningService
 
 spring.datasource.username=root
 spring.datasource.password=ThePassword
@@ -13,3 +13,11 @@ spring.could.stream.bindings.planning_updated.content-type=plain/text
 #Normal deployment, for docker compose enable:
 spring.cloud.stream.kafka.binder.brokers=kafka
 spring.cloud.stream.kafka.binder.zkNodes=zookeeper
+movie.api.key=754be433
+
+spring.data.mongodb.database=movie
+spring.data.mongodb.host=moviedb
+spring.data.mongodb.username=root
+spring.data.mongodb.password=ThePassword
+spring.data.mongodb.port=27017
+spring.data.mongodb.authentication-database = admin
