--- a/ticket_management_service/src/main/resources/application.properties
+++ b/ticket_management_service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=2300
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://ticket_db:3306/Ticket
+spring.datasource.url=jdbc:mysql://localhost:3306/Ticket
 spring.datasource.username=root
 spring.datasource.password=root
