--- a/frontend/DockerFile
+++ b/frontend/DockerFile
@@ -1,12 +1,19 @@
 FROM node:alpine AS builder
 
+# set working directory
 WORKDIR /app
 
-COPY . .
+# add `/app/node_modules/.bin` to $PATH
+ENV PATH /app/node_modules/.bin:$PATH
 
-RUN npm install && \
-    npm run build
+# install and cache app dependencies
+COPY package.json /app/package.json
+RUN npm install
+RUN npm install -g @angular/cli@7.3.9
 
-FROM nginx:alpine
+# add app
+COPY . /app
 
-COPY --from=builder /app/dist/* /usr/share/nginx/html/
+# start app
+CMD ng serve --host 0.0.0.0 --port 80
+EXPOSE 80
