--- a/hall_planning_service/Dockerfile
+++ b/hall_planning_service/Dockerfile
@@ -1,23 +1,12 @@
-from openjdk:8
+from maven:3.6-jdk-8-alpine AS builder
+#from openjdk:8
+WORKDIR /app
+copy pom.xml .
+RUN mvn -e -B dependency:resolve
+copy src ./src
+RUN mvn -e -B package -DskipTests
+#CMD ["java", "-jar","/app/target/hall_planning_service-0.0.1-SNAPSHOT.jar"]
 
-WORKDIR /app/
-COPY . /app/ 
-#COPY mvnw pom.xml ./app/
-#COPY .mvn ./app/mvn
-#COPY src /app/src
-
-#RUN apt-get update && apt-get install -y curl --no-install-recommends
-
-#build application
-RUN ./mvnw package -DskipTests
-
-#Wachten op correcte service
-ENTRYPOINT ["./wait-for-it.sh", "mySQLdb:3306", "--", "java", "-jar", "/app/target/hall_planning_service-0.0.1-SNAPSHOT.jar"]
-
-#ENTRYPOINT ["java","-jar","/app/target/hall_planning_service-0.0.1-SNAPSHOT.jar"]
-
-
-#PORT That is exposed:
-EXPOSE 2223
-
-#CMD ["java", "-jar", "app/target/hall_planning_service-0.0.1-SNAPSHOT.jar"]
+FROM openjdk:8-jre-alpine
+COPY --from=builder /app/target/hall_planning_service-0.0.1-SNAPSHOT.jar /
+CMD ["java", "-jar", "/hall_planning_service-0.0.1-SNAPSHOT.jar"]
