--- a/hall_planning_service/src/main/resources/application-prod.properties
+++ b/hall_planning_service/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 server.port=2223
 spring.jpa.hibernate.ddl-auto=update
 #Docker compose:
-spring.datasource.url=jdbc:mysql://mySQLdb:3306/HallPlanningService
+spring.datasource.url=jdbc:mysql://mysqldb:3306/HallPlanningService
 
 spring.datasource.username=root
 spring.datasource.password=ThePassword
