--- a/frontend/DockerFile
+++ b/frontend/DockerFile
@@ -1,19 +1,14 @@
-FROM node:alpine AS builder
-
+# Stage 0, "build-stage", based on Node.js, to build and compile the frontend
+FROM tiangolo/node-frontend:10 as build-stage
 # set working directory
 WORKDIR /app
-
-# add `/app/node_modules/.bin` to $PATH
-ENV PATH /app/node_modules/.bin:$PATH
-
-# install and cache app dependencies
-COPY package.json /app/package.json
+COPY package*.json /app/
 RUN npm install
-RUN npm install -g @angular/cli@7.3.9
-
-# add app
-COPY . /app
-
-# start app
-CMD ng serve --host 0.0.0.0 --port 80
-EXPOSE 80
+COPY ./ /app/
+ARG configuration=production
+RUN npm run build -- --output-path=./dist/out --configuration $configuration
+# Stage 1, based on Nginx, to have only the compiled app, ready for production with Nginx
+FROM nginx:1.15
+COPY --from=build-stage /app/dist/out/ /usr/share/nginx/html
+# Copy the default nginx.conf provided by tiangolo/node-frontend
+COPY --from=build-stage /nginx.conf /etc/nginx/conf.d/default.conf
