--- a/hall_planning_service/src/main/resources/application-prod.properties
+++ b/hall_planning_service/src/main/resources/application-prod.properties
@@ -6,6 +6,7 @@ spring.datasource.url=jdbc:mysql://mysqldb:3306/HallPlanningService
 spring.datasource.username=root
 spring.datasource.password=ThePassword
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC+1
 
 spring.cloud.stream.bindings.planning_updated.destination=planningMade
 spring.could.stream.bindings.planning_updated.content-type=plain/text
