Working frontend (no link to backend yet)

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -82,14 +82,14 @@ services:
 #---- API gateway ------
   api-gateway:
     build:
-      context: ./API-Gateway
+      context: ./api-gateway
     restart: on-failure
     links:
       - hall-planning
     ports: 
-      - "8080"
-    expose:
       - "8080:8080"
+    expose:
+      - "8080"
 #  ticket_management:
 #    build:
 #      context: ./ticket_management_service
@@ -127,3 +127,18 @@ services:
       - "2230:2230"
     expose:
       - "2230"
+#------ frontend -------
+  frontend:
+    build:
+      context:  ./frontend
+    restart: on-failure
+    links:
+      - api-gateway
+    depends_on:
+      - api-gateway
+      - shop-service
+      - hall-planning
+    ports:
+      - "80:80"
+    expose:
+      - "80"
