--- a/frontend/Dockerfile_v2
+++ b/frontend/Dockerfile_v2
@@ -4,9 +4,9 @@ WORKDIR /app
 
 COPY . .
 
-RUN npm install && \
-    npm run build
+RUN npm install --no-optional
+RUN npm run build
 
 FROM nginx:alpine
 
-COPY --from=builder /app/dist/* /usr/share/nginx/html/
+COPY --from=builder /app/dist/out/ /usr/share/nginx/html/
