--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,9 +28,10 @@
     "jquery": "^3.4.1",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.3",
+    "npm": "^6.13.4",
     "popper.js": "^1.16.0",
     "rxjs": "~6.4.0",
-    "rxjs-compat": "^6.5.3",
+    "rxjs-compat": "^6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
@@ -42,14 +43,14 @@
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
+    "codelyzer": "^5.2.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.5.1",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
