--- a/kubernetes/frontend-pod.yaml
+++ b/kubernetes/frontend-pod.yaml
@@ -1,14 +1,16 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  creationTimestamp: null
+  name: frontend-pod
   labels:
-    io.kompose.service: frontend
-  name: frontend
+    environment : dev
+    app: frontend
 spec:
+  hostname: frontend-pod
   containers:
   - image: frontend
-    name: frontend
+    name: frontend-container
+    imagePullPolicy: Never
     ports:
     - containerPort: 80
     resources: {}
