--- a/kubernetes/frontend-service.yaml
+++ b/kubernetes/frontend-service.yaml
@@ -1,19 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    kompose.cmd: kompose convert -o kubernetes
-    kompose.version: 1.20.0 (f3d54d784)
-  creationTimestamp: null
-  labels:
-    io.kompose.service: frontend
-  name: frontend
+  name: frontend-service
 spec:
+  type: NodePort
+  ports:
+    - port: 80
+    - nodePort: 80
+  selector:
+    app: "frontend"
+    role: "frontend"
   ports:
   - name: "80"
     port: 80
     targetPort: 80
   selector:
-    io.kompose.service: frontend
-status:
-  loadBalancer: {}
+    app: frontend
