--- a/kubernetes/mysqldb-deployment.yaml
+++ b/kubernetes/mysqldb-deployment.yaml
@@ -1,10 +1,6 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose convert -o kubernetes
-    kompose.version: 1.20.0 (f3d54d784)
-  creationTimestamp: null
   labels:
     io.kompose.service: mysqldb
   name: mysqldb
