--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -1,3 +1,4 @@
 FROM mysql:5.7
 # Copy our custom SQL file to /docker-entrypoint-initdb.d folder
-COPY ./init.sql /docker-entrypoint-initdb.d/init.sql
+ENV MYSQL_ROOT_PASSWORD=ThePassword
+COPY extra_databases.sql /docker-entrypoint-initdb.d/extra_databases.sql
