messed about with ingress instead of spring api gw

--- a/API-Gateway/src/main/resources/application-dev.properties
+++ b/API-Gateway/src/main/resources/application-dev.properties
@@ -1,2 +1,4 @@
 server.port=8080
 connection.hall_container=localhost
+connection.shop_container=shop
+spring.cloud.kubernetes.discovery.enabled=false
