--- a/API-Gateway/src/main/resources/application-prod.properties
+++ b/API-Gateway/src/main/resources/application-prod.properties
@@ -1,2 +1,5 @@
 server.port=8080
 connection.hall_container=hall-planning
+connection.shop_container=shop
+spring.cloud.kubernetes.discovery.all-namespaces=true
+spring.cloud.kubernetes.discovery.enabled=true
