--- a/kubernetes/api-gateway-service.yaml
+++ b/kubernetes/api-gateway-service.yaml
@@ -1,19 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    kompose.cmd: kompose convert -o kubernetes
-    kompose.version: 1.20.0 (f3d54d784)
-  creationTimestamp: null
   labels:
-    io.kompose.service: api-gateway
+    app: api-gateway
   name: api-gateway
 spec:
   ports:
-  - name: "8080"
-    port: 8080
+  - port: 8080
     targetPort: 8080
+    name: http
   selector:
-    io.kompose.service: api-gateway
+    app: api-gateway
+  type: NodePort
 status:
   loadBalancer: {}
