--- a/kubernetes/shop-pod.yaml
+++ b/kubernetes/shop-pod.yaml
@@ -3,11 +3,13 @@ kind: Pod
 metadata:
   creationTimestamp: null
   labels:
-    io.kompose.service: shop-service
-  name: shop-service
+    io.kompose.service: shop
+    app: shop
+  name: shop
 spec:
   containers:
   - image: shop-service
+    imagePullPolicy: Never
     name: shop-service
     ports:
     - containerPort: 2230
