--- a/staff_service/src/main/resources/application.properties
+++ b/staff_service/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 
+# BEAN FLAG
+populateCinemaRepository.enabled=true
+populateEmployeeRepository.enabled=true
+populateTimeSlotRepositoryBasic.enabled=false
+populateTimeSlotRepository.enabled=true
