--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,37 +1,34 @@
+ 
+upstream shop {
+    server shop;
+}
+  
+
 server {
   listen 80;
-  root /usr/share/nginx/html;
-  index index.html index.htm;
-  location / {
-    try_files $uri $uri/ /index.html;
-    proxy_pass http://hello;
+  add_header 'Access-Control-Allow-Origin' "$http_origin" always;
+  add_header 'Access-Control-Allow-Origin' '*';
+  add_header 'Access-Control-Allow-Credentials' 'true' always;
+  add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
 
-	if ($request_method = 'OPTIONS') {
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-        #
-        # Custom headers and headers various browsers *should* be OK with but aren't
-        #
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-        #
-        # Tell client that this pre-flight info is valid for 20 days
-        #
-        add_header 'Access-Control-Max-Age' 1728000;
-        add_header 'Content-Type' 'text/plain; charset=utf-8';
-        add_header 'Content-Length' 0;
-        return 204;
-     }
-     if ($request_method = 'POST') {
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
-     }
-     if ($request_method = 'GET') {
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
-        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
-     }
+  location / {
+	include  /etc/nginx/mime.types;
+    root /usr/share/nginx/html;
+	index index.html index.htm;
+    try_files $uri $uri/ /index.html =404;
+	add_header 'Access-Control-Allow-Origin' "$http_origin" always;
+	add_header 'Access-Control-Allow-Credentials' 'true' always;
+	add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+	gzip  on;
+	
+  }
+  location /stock {
+	proxy_pass http://shop/stock;
+  }
+  location /shopItem {
+	proxy_pass http://shop/shopItem;
+  }
+  location /transaction {
+	proxy_pass http://shop/transaction;
   }
 }
