--- a/kubernetes/definitive_versions/frontend.yaml
+++ b/kubernetes/definitive_versions/frontend.yaml
@@ -1,4 +1,27 @@
 apiVersion: v1
+kind: Service
+metadata:
+  name: frontend
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
+spec:
+  type: NodePort
+  ports:
+    - port: 80
+    - nodePort: 80
+  selector:
+    app: "frontend"
+    role: "frontend"
+  ports:
+  - name: "80"
+    port: 80
+    targetPort: 80
+  selector:
+    app: frontend
+---
+apiVersion: v1
 kind: Pod
 metadata:
   name: frontend
