--- a/kubernetes/definitive_versions/frontend.yaml
+++ b/kubernetes/definitive_versions/frontend.yaml
@@ -1,45 +1,37 @@
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: frontend
+  labels:
+    app: frontend
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: frontend
+  template:
+    metadata:
+      labels:
+        app: frontend
+    spec:
+      containers:
+      - image: frontend
+        name: frontend
+        imagePullPolicy: Never
+        ports:
+        - containerPort: 80
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
-    nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
-spec:
-  type: NodePort
-  ports:
-    - port: 80
-    - nodePort: 80
-  selector:
-    app: "frontend"
-    role: "frontend"
-  ports:
-  - name: "80"
-    port: 80
-    targetPort: 80
-  selector:
-    app: frontend
----
-apiVersion: v1
-kind: Pod
-metadata:
-  name: frontend
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
-    nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
   labels:
-    environment : dev
     app: frontend
+  name: frontend
 spec:
-  hostname: frontend
-  containers:
-  - image: frontend
-    name: frontend
-    imagePullPolicy: Never
-    ports:
-    - containerPort: 80
-    resources: {}
-  restartPolicy: OnFailure
-status: {}
+  type: ClusterIP
+  ports:
+  - name: http
+    port: 80 # inside the cluster
+    targetPort: 80 # pod port, same as containerPort
+  selector:
+    app: frontend
