--- a/kubernetes/definitive_versions/shop.yaml
+++ b/kubernetes/definitive_versions/shop.yaml
@@ -1,36 +1,37 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  creationTimestamp: null
   labels:
-    io.kompose.service: shop
     app: shop
   name: shop
 spec:
-  containers:
-  - image: shop-service
-    imagePullPolicy: Never
-    name: shop-service
-    ports:
-    - containerPort: 2230
-    resources: {}
-  restartPolicy: OnFailure
-status: {}
+  replicas: 1
+  selector:
+    matchLabels:
+      app: shop
+  template:
+    metadata:
+      labels:
+        app: shop
+    spec:
+      containers:
+      - image: shop
+        imagePullPolicy: Never
+        name: shop
+        ports:
+        - containerPort: 2230
 ---
 apiVersion: v1
 kind: Service
 metadata:
   labels:
-    io.kompose.service: shop
     app: shop
   name: shop
 spec:
+  type: ClusterIP
   ports:
   - name: "2230"
-    port: 2230
-    targetPort: 2230
+    port: 2230 # inside the cluster
+    targetPort: 2230 # pod port, same as containerPort
   selector:
-    io.kompose.service: shop
-    tier: backend
-status:
-  loadBalancer: {}
+    app: shop
