--- a/shop_service/src/main/resources/application-prod.properties
+++ b/shop_service/src/main/resources/application-prod.properties
@@ -5,3 +5,4 @@ spring.datasource.url=jdbc:mysql://mysqldb:3306/Shop
 spring.datasource.username=root
 spring.datasource.password=ThePassword
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+server.servlet.context-path=/shop
