--- a/hall_planning_service/src/main/resources/application-prod.properties
+++ b/hall_planning_service/src/main/resources/application-prod.properties
@@ -22,3 +22,6 @@ spring.data.mongodb.username=root
 spring.data.mongodb.password=ThePassword
 spring.data.mongodb.port=27017
 spring.data.mongodb.authentication-database = admin
+
+server.servlet.context-path=/planning
+publicity.url=publicity
