--- a/kubernetes/definitive_versions/moviedb.yaml
+++ b/kubernetes/definitive_versions/moviedb.yaml
@@ -25,27 +25,38 @@ spec:
     requests:
       storage: 2Gi
 ---
-apiVersion: v1
-kind: ReplicationController
+apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
+kind: Deployment
 metadata:
-  labels:
-    name: moviedb
-    app: moviedb
   name: moviedb
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: moviedb
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
-        name: moviedb
+        app: moviedb
     spec:
       containers:
       - image: mongo
         name: moviedb
+        env:
+          # Use secret in real usage
+        - name: MONGO_INITDB_DATABASE
+          value: movie
+        - name: MONGODB_USERNAME
+          value: root
+        - name: MONGODB_PASSWORD
+          value: ThePassword
+        - name: MONGODB_DATABASE
+          value: movie
         ports:
-        - name: mongo
-          containerPort: 27017
-          hostPort: 27017
+        - containerPort: 3306
+          name: moviedb
         volumeMounts:
         - name: mongo-persistent-storage
           mountPath: /var/lib/mongo
@@ -58,8 +69,6 @@ apiVersion: v1
 kind: Service
 metadata:
   name: moviedb
-  labels:
-    app: moviedb
 spec:
   ports:
   - name: "27017"
