Added runnable kafka
Run with kubectl apply -f . <- being the directory

--- a/kubernetes/master_files/mysql.yaml
+++ b/kubernetes/master_files/mysql.yaml
@@ -43,8 +43,7 @@ spec:
         chaos: immune
     spec:
       containers:
-      - image: mysqldb #locally at the moment
-        imagePullPolicy: Never
+      - image: rgoussey/mysqldb #locally at the moment
         name: mysqldb
         env:  #is done in dockerfile
           # Use secret in real usage
