added buy ticket functionality + frontend

--- a/ticket_management_service/src/main/resources/application-dev.properties
+++ b/ticket_management_service/src/main/resources/application-dev.properties
@@ -3,7 +3,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/system_design
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=ThePassword
 
 spring.cloud.stream.bindings.ticket_sold.destination=soldTicket
 spring.cloud.stream.bindings.ticket_sold.content-type=plain/text
