--- a/ticket_management_service/src/main/resources/application-prod.properties
+++ b/ticket_management_service/src/main/resources/application-prod.properties
@@ -14,3 +14,6 @@ spring.cloud.stream.bindings.ticket_sold.content-type=plain/text
 
 spring.cloud.stream.bindings.planning_updated.destination=planningMade
 spring.cloud.stream.bindings.planning_updated.content-type=application/json
+
+planning.host.name=planning-service
+planning.host.port=2223
