--- a/ticket_management_service/src/main/resources/application-dev.properties
+++ b/ticket_management_service/src/main/resources/application-dev.properties
@@ -5,8 +5,13 @@ spring.datasource.url=jdbc:mysql://localhost:3306/system_design
 spring.datasource.username=root
 spring.datasource.password=ThePassword
 
+server.servlet.context-path=/ticket
+
 spring.cloud.stream.bindings.ticket_sold.destination=soldTicket
 spring.cloud.stream.bindings.ticket_sold.content-type=plain/text
 
 spring.cloud.stream.bindings.planning_updated.destination=planningMade
 spring.cloud.stream.bindings.planning_updated.content-type=application/json
+
+planning.host.name=localhost
+planning.host.port=2223
