MADE KAFKA WORK

--- a/ticket_management_service/src/main/resources/application-prod.properties
+++ b/ticket_management_service/src/main/resources/application-prod.properties
@@ -6,8 +6,7 @@ spring.datasource.username=root
 spring.datasource.password=ThePassword
 server.servlet.context-path=/ticket
 
-spring.cloud.stream.kafka.binder.brokers=kafka
-spring.cloud.stream.kafka.binder.zkNodes=pzoo
+spring.kafka.bootstrap-servers=bootstrap.kafka:9092
 
 spring.cloud.stream.bindings.ticket_sold.destination=soldTicket
 spring.cloud.stream.bindings.ticket_sold.content-type=plain/text
@@ -15,5 +14,5 @@ spring.cloud.stream.bindings.ticket_sold.content-type=plain/text
 spring.cloud.stream.bindings.planning_updated.destination=planningMade
 spring.cloud.stream.bindings.planning_updated.content-type=application/json
 
-planning.host.name=planning-service
+planning.host.name=planning
 planning.host.port=2223
