--- a/kubernetes/definitive_versions/ticket.yaml
+++ b/kubernetes/definitive_versions/ticket.yaml
@@ -15,7 +15,7 @@ spec:
         app: ticket
     spec:
       containers:
-      - image: ticket-management
+      - image: ticket-management:latest
         imagePullPolicy: Never
         name: ticket
         ports:
@@ -28,7 +28,6 @@ metadata:
     app: ticket
   name: ticket
 spec:
-  type: ClusterIP
   ports:
   - name: "2300"
     port: 2300 # inside the cluster
