--- a/parking_service/src/main/resources/application-prod.properties
+++ b/parking_service/src/main/resources/application-prod.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mysql://mysqldb:3306/system_design
 spring.datasource.username=root
 spring.datasource.password=ThePassword
 
-server.servlet.context-path=/planning
+server.servlet.context-path=/parking
 
 host.name=ticket-service
 host.port=2300
