added ingress functionality + hall planning kafka fix

--- a/hall_planning_service/src/main/resources/application-prod.properties
+++ b/hall_planning_service/src/main/resources/application-prod.properties
@@ -10,9 +10,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.cloud.stream.bindings.planning_updated.destination=planningMade
 spring.could.stream.bindings.planning_updated.content-type=plain/text
 
-#Normal deployment, for docker compose enable:
-spring.cloud.stream.kafka.binder.brokers=kafka
-spring.cloud.stream.kafka.binder.zkNodes=zookeeper
+spring.kafka.bootstrap-servers=bootstrap.kafka:9092
 movie.api.key=754be433
 
 spring.data.mongodb.database=movie
