--- a/parking_service/src/main/resources/application-prod.properties
+++ b/parking_service/src/main/resources/application-prod.properties
@@ -7,5 +7,5 @@ spring.datasource.password=ThePassword
 
 server.servlet.context-path=/parking
 
-host.name=ticket-service
+host.name=ticket
 host.port=2300
