--- a/ticket_management_service/src/main/resources/application-prod.properties
+++ b/ticket_management_service/src/main/resources/application-prod.properties
@@ -14,5 +14,5 @@ spring.cloud.stream.bindings.ticket_sold.content-type=plain/text
 spring.cloud.stream.bindings.planning_updated.destination=planningMade
 spring.cloud.stream.bindings.planning_updated.content-type=application/json
 
-planning.host.name=planning
+planning.host.name=hall-planning
 planning.host.port=2223
