--- a/kubernetes/local_version/parking.yaml
+++ b/kubernetes/local_version/parking.yaml
@@ -15,8 +15,8 @@ spec:
         app: parking
     spec:
       containers:
-      - image: parking-image
-        imagePullPolicy: Never
+      - image: thomasneuser/parking:latest
+        imagePullPolicy: Always
         name: parking
         ports:
         - containerPort: 2301
