--- a/kubernetes/remote_version/ticket.yaml
+++ b/kubernetes/remote_version/ticket.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - image: thomasneuser/ticket:latest
-        imagePullPolicy: Never
+        imagePullPolicy: Always
         name: ticket
         ports:
         - containerPort: 2300
