Updates service Resolves #3 Resolves #8

--- a/kubernetes/moviedb.yaml
+++ b/kubernetes/moviedb.yaml
@@ -40,7 +40,7 @@ spec:
     metadata:
       labels:
         app: moviedb
-        choas: immune
+        chaos: immune
     spec:
       containers:
       - image: mongo
