Fix uncompilable code Resolves #6

--- a/publicity_service/Dockerfile
+++ b/publicity_service/Dockerfile
@@ -1,4 +1,10 @@
-FROM openjdk:8
-RUN apt-get update && apt-get install -y curl
-COPY ./target/publicity_service-0.0.1-SNAPSHOT.jar /usr/src/publicity_service/publicity_service-0.0.1-SNAPSHOT.jar
-CMD ["java", "-jar", "/usr/src/publicity_service/publicity_service-0.0.1-SNAPSHOT.jar"]
+from maven:3.6-jdk-8-alpine AS builder
+WORKDIR /app
+copy pom.xml .
+RUN mvn -e -B dependency:resolve
+copy src ./src
+RUN mvn -e -B package -DskipTests
+
+FROM openjdk:8-jre-alpine
+COPY --from=builder /app/target/publicity_service-0.0.1-SNAPSHOT.jar /
+CMD ["java", "-jar", "/publicity_service-0.0.1-SNAPSHOT.jar"]
