Fix uncompilable code Resolves #6

--- a/kubernetes/publicty.yaml
+++ b/kubernetes/publicty.yaml
@@ -15,7 +15,7 @@ spec:
         app: publicity
     spec:
       containers:
-      - image: publicity
+      - image: rgoussey/publicity
         name: publicity
         ports:
         - containerPort: 5555
