--- a/publicity_service/src/main/resources/application-prod.properties
+++ b/publicity_service/src/main/resources/application-prod.properties
@@ -6,6 +6,9 @@ spring.datasource.username=root
 spring.datasource.password=ThePassword
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 
+spring.cloud.stream.bindings.planning_updated.destination=planningMade
+spring.cloud.stream.bindings.planning_updated.content-type=application/json
+
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
 
