Resolved kafka bugs

--- a/publicity_service/src/main/resources/application-prod.properties
+++ b/publicity_service/src/main/resources/application-prod.properties
@@ -9,6 +9,8 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.cloud.stream.bindings.planning_updated.destination=planningMade
 spring.cloud.stream.bindings.planning_updated.content-type=application/json
 
+spring.kafka.bootstrap-servers=bootstrap.kafka:9092
+
 #spring.h2.console.enabled=true
 #spring.h2.console.path=/h2-console
 
