Added cassandra immune

--- a/kubernetes/cassandra.yaml
+++ b/kubernetes/cassandra.yaml
@@ -74,6 +74,7 @@ spec:
     metadata:
       labels:
         app: cassandra
+        chaos: immune
     spec:
       containers:
         - name: cassandra
